# toy-sample

./: Pipfile  README.md  documentation_quality_report.md  main.py
doc_automation/: README.md  pyproject.toml
doc_automation/src/doc_automation/: __init__.py  crew.py  main.py
doc_automation/src/doc_automation/config/: agents.yaml  tasks.yaml
files/: diff.txt
