[project]
name = "doc_automation"
version = "0.1.0"
description = "doc-automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
doc_automation = "doc_automation.main:run"
run_crew = "doc_automation.main:run"
train = "doc_automation.main:train"
replay = "doc_automation.main:replay"
test = "doc_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
